[gd_scene load_steps=11 format=2]

[ext_resource path="res://enemy/rabbit/dev/dev_rabbit.png" type="Texture" id=1]
[ext_resource path="res://enemy/rabbit/rabbit.gd" type="Script" id=2]
[ext_resource path="res://enemy/rabbit/dev/dev_shadow.png" type="Texture" id=3]
[ext_resource path="res://enemy/rabbit/dev/hurt.wav" type="AudioStream" id=4]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0 ), 0.0, 5.45455, 0, 0, Vector2( 0.557143, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.41626, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 35.5, 27.5 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("RabbitSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("RabbitSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=6]
resource_name = "wander"
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath("RabbitSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="CapsuleShape2D" id=1]
radius = 11.0
height = 34.0

[node name="Rabbit" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 4
script = ExtResource( 2 )
jump_curve = SubResource( 2 )

[node name="ShadowSprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.5 )
position = Vector2( 0, -26 )
texture = ExtResource( 3 )

[node name="RabbitSprite" type="Sprite" parent="."]
position = Vector2( -1, -30 )
texture = ExtResource( 1 )
hframes = 2

[node name="HitBox" type="Area2D" parent="RabbitSprite"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RabbitSprite/HitBox"]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/die = SubResource( 5 )
anims/wander = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
